--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ancient-greek-reader",
-  "homepage": "https://qubitpi.github.io/ancient-greek-reader",
+  "name": "nexusgraph",
+  "homepage": "https://app.nexusgraph.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +11,8 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "neo4j-devtools-arc": "^0.0.83",
+    "neo4j-driver-core": "5.9.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -19,7 +21,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
