--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,6 +30,8 @@ jobs:
           yarn
       - name: Production build
         run: yarn build
+      - name: Load CNAME
+        run: cp CNAME build
       - name: Deploy to GitHub Pages
         if: github.ref == 'refs/heads/master'
         uses: peaceiris/actions-gh-pages@v3
